[package]
name = "TaskManager_lite_test"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = { version = "0.30", features = ["multithread"] }
tokio = { version = "1.41", features = ["full"] }
ratatui = "0.28"
crossterm = "0.28"

[dependencies.nvml-wrapper]
version = "0.10"
optional = true

[features]
default = []
gpu = ["nvml-wrapper"]